# github-search-scrapper

./: .flake8  README.md  pyproject.toml  requirements.txt
github-search-scrapper/: config.py  github_session.py  main.py
github-search-scrapper/database/: __init__.py  db.py  sql_queries.py
